--- a/XTReq/Base.lproj/Main.storyboard
+++ b/XTReq/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,55 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rRA-La-gT4">
+                                <rect key="frame" x="164" y="194" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Na3-11-B8m"/>
+                                    <constraint firstAttribute="width" constant="46" id="mzU-gb-Lre"/>
+                                </constraints>
+                                <state key="normal" title="async"/>
+                                <connections>
+                                    <action selector="asyncAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oLI-TY-Wzf"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZXW-j4-bEp">
+                                <rect key="frame" x="164" y="248" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="QMR-6s-y2e"/>
+                                    <constraint firstAttribute="width" constant="46" id="n5P-ck-pS2"/>
+                                </constraints>
+                                <state key="normal" title="sync"/>
+                                <connections>
+                                    <action selector="syncAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LBJ-f5-y5P"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ake-9S-FCg">
+                                <rect key="frame" x="162" y="300" width="51" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="51" id="AzC-8v-BdG"/>
+                                    <constraint firstAttribute="height" constant="30" id="z6l-0m-vPh"/>
+                                </constraints>
+                                <state key="normal" title="cached"/>
+                                <connections>
+                                    <action selector="cachedAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KpA-C2-Rub"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="ake-9S-FCg" firstAttribute="top" secondItem="ZXW-j4-bEp" secondAttribute="bottom" constant="22" id="8DQ-xU-qbK"/>
+                            <constraint firstItem="ZXW-j4-bEp" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Pje-Zb-ad8"/>
+                            <constraint firstItem="rRA-La-gT4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VXc-IR-Xmy"/>
+                            <constraint firstItem="ake-9S-FCg" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="f8k-7z-qC0"/>
+                            <constraint firstItem="ZXW-j4-bEp" firstAttribute="top" secondItem="rRA-La-gT4" secondAttribute="bottom" constant="24" id="htf-uV-1O3"/>
+                            <constraint firstItem="rRA-La-gT4" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="174" id="i3X-3o-FGy"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="116" y="99.400299850074973"/>
         </scene>
     </scenes>
 </document>
